deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: share-secret-frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: share-secret-frontend
    template:
        metadata:
            labels:
                app: share-secret-frontend
        spec:
            containers:
                - name: share-secret-frontend
                  image: fullpipe/share-secret-frontend:latest
                  imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
    name: share-secret-frontend
spec:
    ports:
        - name: http
          targetPort: 8080
          port: 8080
    selector:
        app: share-secret-frontend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: share-secret
    annotations:
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
        traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
    ingressClassName: 'traefik'
    tls:
        - hosts:
              - share-secret.fullpipe.dev
          secretName: share-secret.fullpipe.dev-tls
    rules:
        - host: share-secret.fullpipe.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: share-secret-frontend
                            port:
                                name: http
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: share-secret-api
                            port:
                                name: http
